set up jumplink component for jump links with fixed header

--- a/services/web/src/screens/Docs/heading.less
+++ b/services/web/src/screens/Docs/heading.less
@@ -1,8 +1,4 @@
 .markdown-body .linked-heading {
-  // Needed while using a fixed heading.
-  padding-top: 100px + 24px;
-  margin-top: -100px;
-
   a {
     color: inherit;
     font-size: 15px;
